Hack: Use at86rfdingens on hifive1

--- a/examples/nanocoap_server/Makefile
+++ b/examples/nanocoap_server/Makefile
@@ -42,7 +42,7 @@ USEMODULE += shell_commands
 
 # Use different settings when compiling for one of the following (low-memory)
 # boards
-LOW_MEMORY_BOARDS := nucleo-f334r8
+LOW_MEMORY_BOARDS := nucleo-f334r8 hifive1
 
 ifneq (,$(filter $(BOARD),$(LOW_MEMORY_BOARDS)))
   $(info Using low-memory configuration for microcoap_server.)
