--- a/boards/hifive1/Makefile.include
+++ b/boards/hifive1/Makefile.include
@@ -5,6 +5,8 @@ export CPU_MODEL = fe310
 # Uses UART0 for stdio input/output (comment out to disable)
 USEMODULE += stdio_uart
 
+USEMODULE += at86rf233
+
 # set default port depending on operating system
 PORT_LINUX ?= /dev/ttyUSB1
 PORT_DARWIN ?= $(firstword $(sort $(wildcard /dev/tty.usbmodem*)))
